@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.31">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.32">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -24,8 +24,8 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.31 [20230223]:
-- Fixed Setting Types
+Changelog 0.3.32 [20230224]:
+- Added GogoHD Sources
     </news>
   </extension>
 </addon>
