@@ -1,3 +1,6 @@
+Changelog 0.3.32 [20230224]:
+- Added GogoHD Sources
+
 Changelog 0.3.31 [20230223]:
 - Fixed Setting Types
 
